| Summary: | ASTERISK-25308: ari: Websocket leak | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-08-09 18:26:27 | Date Closed: | 2015-08-19 17:08:36 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_ari_events |
| Versions: | 13.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | As you can see at https://bamboo.asterisk.org/bamboo/browse/AST-ATSRC/latest we've introduced a lot of ref leaks at shutdown. This is happening because of the Websocket in ARI. It needs to clean itself up at shutdown. | ||
| Comments: | |||